# lights-out

./: .gitignore  Cargo.toml  README.md  index.html
game/: game.js  index.css  index.html  index.js  lights_out.js  lights_out_bg.wasm
src/: lib.rs
src/assets/: mod.rs
src/assets/text/: en.json
src/assets/things/building/: stockpile.json
src/assets/things/resource/: stone.json  wood.json
src/core/: mod.rs
src/core/modifier/: entry.rs  mod.rs  storage.rs
src/core/stat/: entry.rs  storage.rs
src/core/thing/: manager.rs  mod.rs
src/core/thing/building/: asset.rs  data.rs  manager.rs  mod.rs
src/core/thing/modifier/: mod.rs  storage.rs
src/core/thing/resource/: asset.rs  data.rs  manager.rs  mod.rs  storage.rs
src/core/thing/upgrade/: asset.rs  data.rs  manager.rs  mod.rs
src/game/: instance.rs  mod.rs
